# ef-base

./: .gitmodules  .travis.yml  README.md  default.nix  ef-base.cabal  ef-base.nix  shell.nix
bench/: Bench.hs
bench/Bench/: Pipes.hs  State.hs
src/Data/: Promise.hs  Queue.hs
src/Ef/: Async.hs  Base.hs  Event.hs  Except.hs  Reader.hs  State.hs
tests/: Test.hs
