name:                ef-base
version:             3.0.0.0
synopsis:            Base ef library including common Ef abstractions
-- description:
homepage:            github.com/grumply/ef
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tests
  main-is:             Test.hs
  hs-source-dirs:      src tests
  other-modules:       Data.Promise
                       Data.Queue
                       System.Random.Shuffle
                       Ef.Pipes
                       Ef.State
                       Ef.Writer
                       Ef.Reader
                       Ef.Get
                       Ef.Set
                       Ef.Sync
                       Ef.Var
                       Ef.Reflect
                       Ef.Note
                       Ef.Manage
                       Ef.Guard
                       Ef.Generate
                       Ef.Fork
                       Ef.Fiber
                       Ef.Exit
                       Ef.Except
                       Ef.Event
                       Ef.Base
  default-extensions:  DataKinds
                       PolyKinds
                       KindSignatures
                       TypeOperators
                       MultiParamTypeClasses
                       FlexibleContexts
                       BangPatterns
                       GADTs
                       RankNTypes
                       NoMonomorphismRestriction
                       ScopedTypeVariables
                       ExistentialQuantification
                       PatternSynonyms
                       ViewPatterns
                       DeriveFunctor
                       RecordWildCards
                       InstanceSigs
  build-depends:       base >=4.8
                     , ef >= 3
                     , trivial
                     , tlc
                     , random >= 1.1
                     , ghc-prim
                     , mtl
                     , transformers
                     , comonad
                     , free
                     , semigroups
                     , stm
  if (impl(ghcjs))
    ghc-options:       -dedupe
  else
    ghc-options:       -threaded -rtsopts -with-rtsopts=-T -v0
  default-language:    Haskell2010


executable bench
  main-is:             Bench.hs
  hs-source-dirs:      src bench
  other-modules:       Bench.Pipes
                       Bench.State
                       Data.Promise
                       Data.Queue
                       System.Random.Shuffle
                       Ef.Pipes
                       Ef.State
                       Ef.Writer
                       Ef.Reader
                       Ef.Get
                       Ef.Set
                       Ef.Sync
                       Ef.Var
                       Ef.Reflect
                       Ef.Note
                       Ef.Manage
                       Ef.Guard
                       Ef.Generate
                       Ef.Fork
                       Ef.Fiber
                       Ef.Exit
                       Ef.Except
                       Ef.Event
                       Ef.Base
  default-extensions:  DataKinds
                       PolyKinds
                       KindSignatures
                       TypeOperators
                       MultiParamTypeClasses
                       FlexibleContexts
                       BangPatterns
                       GADTs
                       RankNTypes
                       NoMonomorphismRestriction
                       ScopedTypeVariables
                       ExistentialQuantification
                       PatternSynonyms
                       ViewPatterns
                       DeriveFunctor
                       RecordWildCards
                       InstanceSigs
  build-depends:       base >=4.8
                     , ef >= 3
                     , trivial
                     , tlc
                     , random >= 1.1
                     , ghc-prim
                     , mtl
                     , stm
                     , transformers
                     , comonad
                     , free
                     , semigroups
                     , pipes
  if (impl(ghcjs))
    ghc-options:       -dedupe -O2
  else
    ghc-options:       -O2 -threaded -rtsopts -with-rtsopts=-T -v0
  default-language:    Haskell2010

library
  exposed-modules:     Data.Promise
                       Data.Queue
                       System.Random.Shuffle
                       Ef.Pipes
                       Ef.State
                       Ef.Writer
                       Ef.Reader
                       Ef.Get
                       Ef.Set
                       Ef.Sync
                       Ef.Var
                       Ef.Reflect
                       Ef.Note
                       Ef.Manage
                       Ef.Guard
                       Ef.Generate
                       Ef.Fork
                       Ef.Fiber
                       Ef.Exit
                       Ef.Except
                       Ef.Event
                       Ef.Base
  default-extensions:  DataKinds
                       PolyKinds
                       KindSignatures
                       TypeOperators
                       MultiParamTypeClasses
                       FlexibleContexts
                       BangPatterns
                       GADTs
                       RankNTypes
                       NoMonomorphismRestriction
                       ScopedTypeVariables
                       ExistentialQuantification
                       PatternSynonyms
                       ViewPatterns
                       DeriveFunctor
                       RecordWildCards
                       InstanceSigs
  build-depends:       base >=4.8
                     , ef >= 3
                     , tlc
                     , random >= 1.1
                     , ghc-prim
                     , mtl
                     , transformers
                     , comonad
                     , free
                     , semigroups
                     , stm
  hs-source-dirs:      src
  default-language:    Haskell2010
